--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -56,10 +56,12 @@ http {
     }
   }
 
+  # --- upstreams
   upstream nango {
     server localhost:3003;
   }
 
+  # --- server proxy
   server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
